--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -10,39 +10,26 @@ Version: 2023.1685134906
 Updated: 2023-05-26 23:01:46
 */
 
+
+/* Styles par défaut (desktop first) */
+
 /*-------------------------*\
     Base & Utilities
 \*-------------------------*/
-body{margin: 0;}
+body, p{margin: 0;}
 
-.row{
-    display: flex;
-    flex-direction: row;
-}
-.col{
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 100%;
-    gap: 30px;
-}
+
+
 
 
 /*-------------------------*\
     Header
 \*-------------------------*/
-/*
-a.hfe-menu-item:hover{
-    font-size: 13px;
-    font-weight: 700;
-    transform: translate(4px, -2px);
-}
-*/
-
 .header{
-    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 80px;
     padding-left: 37px;
     color: #fff;
     background: #fff;
@@ -56,6 +43,7 @@ a.hfe-menu-item:hover{
 
 .nav-wrapper{
     display: flex;
+    gap: 60px;
 }
 
 .header__nav{
@@ -68,7 +56,8 @@ a.hfe-menu-item:hover{
 .header__nav ul{
     display: flex;
     gap: 60px;
-    margin-right: 60px;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
 }
 
@@ -91,6 +80,7 @@ a.hfe-menu-item:hover{
     background: #DC9F96;
     border: none;
     border-radius: 0 !important;
+    cursor: pointer;
 }
 
 .header__button:hover{background: #C02E44;}
@@ -98,23 +88,19 @@ a.hfe-menu-item:hover{
 
 
 /*-------------------------*\
-    Forms
+    Forms generic
 \*-------------------------*/
-.contact input:focus-visible,
-.contact textarea:focus-visible{outline: 2px solid #3B8E46;}
-
-.order input:focus-visible,
-.order textarea:focus-visible{outline: 2px solid #D2776A;}
-
 .form{
     display: flex;
     flex-direction: column;
 }
 
+.form-title{margin: 0;}
+
 .form-group{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 13px;
     font-size: 20px;
 }
 
@@ -138,19 +124,23 @@ a.hfe-menu-item:hover{
 }
 
 
+
 /*-------------------------*\
     Contact Page
 \*-------------------------*/
 .form--contact{gap: 22px;}
+
 .form-submit--contact{width: 52%;}
 
+.contact input:focus-visible,
+.contact textarea:focus-visible{outline: 2px solid #3B8E46;}
 
 
 
 /*-------------------------*\
     Order Page
 \*-------------------------*/
-/*** Products ***/
+/***** Products *****/
 .product-img{grid-column: 1 / span 2;}
 
 .quantity{position: relative;}
@@ -189,14 +179,14 @@ input[type=number]{
 
 .quantity-button{
     position: relative;
-    border-left: 1px solid #eee;
     width: 31px;
     text-align: center;
     color: #fff;
-    background: #DC9F96;
     font-size: 13px;
     line-height: 2;
     cursor: pointer;
+    background: #DC9F96;
+    border-left: 1px solid #eee;
     transform: translateX(-100%);
     -webkit-transform: translateX(-100%);
     -webkit-user-select: none;
@@ -208,8 +198,8 @@ input[type=number]{
 
 .quantity-button.quantity-up{
     position: absolute;
-    height: 28px;
     top: 0;
+    height: 28px;
     border-bottom: 1px solid #eee;
     border-radius: 0 5px 0 0;
 }
@@ -221,26 +211,57 @@ input[type=number]{
     border-radius: 0 0 5px 0;
 }
 
-/*** Button OK ***/
+/** OK Btns **/
 .product-btn a{
     width: 100%;
     height: 56px;
 }
 
+/***** Order Form *****/
+.order-form-wrapper{
+    display: flex;
+    flex-direction: row;
+}
 
-/****** Order Form ******/
+.order-form-col{
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 100%;
+    gap: 30px;
+}
+
 .form--order{
+    position: relative;
     gap: 44px;
     color: #fff;
 }
 
-.col:nth-child(1){
+.order-form-col:nth-child(1){
     padding-right: 45px;
     border-right: 1px solid #fff;
 }
 
-.col:nth-child(2){padding-left: 45px;}
+.order-form-col:nth-child(2){padding-left: 45px;}
 
+.order input:focus-visible,
+.order textarea:focus-visible{outline: 2px solid #D2776A;}
+
+
+/** Loader CF7 **/
+.wpcf7-spinner{
+    position: absolute;
+    bottom: -32px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+}
+
+/** Error response CF7 **/
+.wpcf7-response-output{
+    margin: 0 !important;
+    border-color: #fff !important;
+    padding: 1em !important;
+}
 
 /*-------------------------*\
     Footer
@@ -258,55 +279,64 @@ input[type=number]{
     text-decoration: none;
 }
 
+.footer__nav-item:hover{
+    color: #959595;
+    text-decoration: none;
+}
+
+
+
 /*-------------------------*\
     Responsive
 \*-------------------------*/
-/* Mobile small 420px and down */
-@media (max-width: 420px) {
-    .form-title{font-size: 22px !important;}
+
+/*** Laptop/Desktop 1120px and up ***/
+@media (min-width: 900px) and (max-width: 1120px) {
+    .order-form-col:nth-child(1){padding-right: 30px;}
+    .order-form-col:nth-child(2){padding-left: 30px;}
 }
 
-/* Mobile */
-@media (max-width: 576px) {
 
-}
-
-/* Tablet */
-@media (max-width: 768px) {
-
-}
-
-/* Laptop */
-@media (max-width: 900px) {
+/*** Laptop ***/
+@media(max-width: 900px){
+    /* Header */
     .header{
         flex-direction: column;
         padding: 20px 0;
         gap: 20px;
+        padding-left: 0;
+        height: auto;
     }
 
     .nav-wrapper{
-        display: flex;
-    }
-
-    .header__nav ul{
-        margin-right: 40px;
+        gap: 50px;
     }
 
     .header__button{
+        align-self: center;
+        height: 34px;
         padding: 0 30px;
+        border-radius: 5px !important;
     }
+    
 
-    .row{
+    /* Order Form */
+    .order-form-wrapper{
         flex-direction: column;
         gap: 40px;
     }
 
-    .col:nth-child(1){
+    .order-form-col:nth-child(1){
         padding-right: 0;
         border-right: none;
     }
 
-    .col:nth-child(2){padding-left: 0;}
+    .order-form-col:nth-child(2){padding-left: 0;}
+
+    /* Contact & Order form */
+    .form-control{
+        padding: 18px 20px;
+    }
 
     .form-submit{
         width: 100%;
@@ -316,8 +346,33 @@ input[type=number]{
 }
 
 
-/* Laptop/Desktop 1120px and up */
-@media (min-width: 900px) and (max-width: 1120px) {
-    .col:nth-child(1){padding-right: 30px;}
-    .col:nth-child(2){padding-left: 30px;}
+/*** Tablet ***/
+@media (max-width: 768px) {}
+
+/*** Mobile ***/
+@media (max-width: 576px) {
+    .nav-wrapper{gap: 30px;}
+    
+    .header__nav ul{gap: 30px;}
+
+    .header__button{
+        padding: 0 15px;
+        height: 28px;
+    }
+}
+
+
+/*** Mobile small 420px and down ***/
+@media (max-width: 420px) {
+    .nav-wrapper{gap: 20px;}
+
+    .header__nav ul{
+        display: flex;
+        gap: 20px;        
+        list-style-type: none;
+    }
+
+    .header__button{padding: 0 8px;}
+    
+    .form-title{font-size: 22px !important;}
 }
